--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
     "typography-theme-grand-view": "^0.16.19",
+    "typography-theme-stow-lake": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19",
     "update": "^0.7.4"
   },
