--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-manifest": "^2.2.37",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sass": "^4.8.0",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-typography": "^2.3.25",
@@ -32,6 +33,7 @@
     "gatsby-transformer-sharp": "^2.3.12",
     "help": "^3.0.2",
     "lodash": "^4.17.15",
+    "node-sass": "^6.0.1",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
